...
        folderViewModel = folderViewModel,
        onDismiss = { showBottomSheet = false },
        navigationActions = navigationActions)
  }

  Card(
      Modifier.testTag("deckCard")
          .height(140.dp)
          .padding(4.dp)
          .semantics(mergeDescendants = true, properties = {})
          .fillMaxWidth()
          // Enable drag and drop for the note card as a source
          .dragAndDropSource {
...

                if (deck.userId == currentUser.uid &&
                    navigationActions.currentRoute() != Screen.SEARCH) {
                  Row(verticalAlignment = Alignment.CenterVertically) {
                    Icon(
                        modifier =
                            Modifier.testTag("showBottomSheetButton").size(24.dp).clickable {
                              showBottomSheet = true
                            },
                        imageVector = Icons.Filled.MoreVert,
                        contentDescription = null,
                        tint = MaterialTheme.colorScheme.onPrimaryContainer)
                  }
...
    navigationActions: NavigationActions
) {
  var showFileSystemPopup by remember { mutableStateOf(false) }
  var showDeletePopup by remember { mutableStateOf(false) }

  if (showFileSystemPopup) {
    FileSystemPopup(
        onDismiss = { showFileSystemPopup = false },
        folderViewModel = folderViewModel,
        onMoveHere = { selectedFolder ->
          deckViewModel.updateDeck(
              deck.copy(folderId = selectedFolder?.id, lastModified = Timestamp.now()))
          showFileSystemPopup = false
...
        onDismiss = {
          showDeletePopup = false // Close the dialog without deleting
        })
  }

  ModalBottomSheet(
      modifier = Modifier.testTag("deckModalBottomSheet"),
      onDismissRequest = onDismiss,
      content = {
        Column(modifier = Modifier.padding(16.dp)) {
          Row(
              modifier =
                  Modifier.fillMaxWidth()
                      .clickable { showFileSystemPopup = true }
                      .padding(vertical = 8.dp)
                      .testTag("moveDeckBottomSheet"),
              verticalAlignment = Alignment.CenterVertically) {
                Icon(
                    imageVector = Icons.Default.FolderOpen,
                    contentDescription = stringResource(R.string.move_deck))
                Spacer(modifier = Modifier.width(16.dp))
                Text(
...

          Row(
              modifier =
                  Modifier.fillMaxWidth()
                      .clickable { showDeletePopup = true }
                      .padding(vertical = 8.dp)
                      .testTag("deleteDeckBottomSheet"),
              verticalAlignment = Alignment.CenterVertically) {
                Icon(
                    imageVector = Icons.Outlined.Delete,
                    contentDescription = stringResource(R.string.delete_deck),
                    tint = MaterialTheme.colorScheme.error)
                Spacer(modifier = Modifier.width(16.dp))
...

  AlertDialog(
      onDismissRequest = onDismissRequest,
      title = { Text("$mode Deck") },
      text = {
        Column(
            modifier = Modifier.padding(16.dp).testTag("deckDialog"),
            verticalArrangement = Arrangement.spacedBy(8.dp),
            horizontalAlignment = Alignment.CenterHorizontally) {
              OutlinedTextField(
                  value = deckTitle.value,
                  onValueChange = { deckTitle.value = Deck.formatTitle(it) },
                  label = { Text(stringResource(R.string.name)) },
                  maxLines = 1,
                  modifier = Modifier.testTag("deckTitleTextField"),
              )
              SelectVisibility(deckVisibility.value, true) { deckVisibility.value = it }
              OutlinedTextField(
                  value = deckDescription.value,
                  onValueChange = { deckDescription.value = Deck.formatDescription(it) },
                  label = { Text(stringResource(R.string.description)) },
                  minLines = 2,
                  maxLines = 5,
                  modifier = Modifier.testTag("deckDescriptionTextField"))
            }
      },
      confirmButton = {
        Button(
            enabled = deckTitle.value.isNotBlank(),
            modifier = Modifier.testTag("saveDeckButton"),
            onClick = {
              val newDeck =
                  deck.value?.copy(
                      name = deckTitle.value,
                      description = deckDescription.value,
                      visibility = deckVisibility.value,
                      lastModified = Timestamp.now())
                      ?: Deck(
                          id = deckViewModel.getNewUid(),
                          name = deckTitle.value,
...
